--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fuzzball-loopsum"]
 	path = fuzzball-loopsum
 	url = https://github.com/yanxx297/fuzzball-loopsum
+[submodule "sv-benchmarks"]
+	path = sv-benchmarks
+	url = https://github.com/sosy-lab/sv-benchmarks
