--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/yanxx297/cb-multios
 [submodule "fuzzball-loopsum"]
 	path = fuzzball-loopsum
-	url = https://github.com/yanxx297/fuzzball-loopsum
+	url = https://github.com/yanxx297/fuzzball
 [submodule "sv-benchmarks"]
 	path = sv-benchmarks
 	url = https://github.com/yanxx297/sv-benchmarks
